force-app/main/default/objects/Contact/fields/Registration_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Status__c</fullName>
    <label>Registration Form Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expression of Interest Only</fullName>
            </value>
            <value>
                <fullName>GFD Registration Form Complete</fullName>
            </value>
            <value>
                <fullName>B&amp;S Registration Form Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>