force-app/main/default/objects/Contact/fields/Registration_Form_submitted__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Form submitted?</label>
    <type>Checkbox</type>
</CustomField>