force-app/main/default/objects/Contact/fields/Relationship_to_you__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_you__c</fullName>
    <label>Relationship to you</label>
    <length>100</length>
    <type>Text</type>
</CustomField>