force-app/main/default/objects/Contact/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <label>RSVP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RSVP Yes</fullName>
            </value>
            <value>
                <fullName>RSVP No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>