force-app/main/default/objects/Contact/fields/Selected_Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Volunteer_Type__c</fullName>
    <label>Selected Volunteer Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BefriendingAndSupport</fullName>
                <label>Befriending And Support</label>
            </value>
            <value>
                <fullName>GoodFoodDelivered</fullName>
                <label>Good Food Delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>