force-app/main/default/objects/Contact/fields/Sponsored_fundraising_vol_or_other__c.field-meta.xml
<CustomField>
    <fullName>Sponsored_fundraising_vol_or_other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsored fundraising (vol or other)?</label>
    <type>Checkbox</type>
</CustomField>