force-app/main/default/objects/Contact/fields/Subscribed_to_MC_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Subscribed_to_MC_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscribed to MC Marketing</label>
    <type>Checkbox</type>
</CustomField>