force-app/main/default/objects/Contact/fields/Vol_Confidentiality_Policy_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Vol_Confidentiality_Policy_Agreement__c</fullName>
    <label>Vol. Confidentiality Policy &amp; Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documents_to_sign</valueSetName>
    </valueSet>
</CustomField>