force-app/main/default/objects/Contact/fields/Volunteer_Availability_Evening__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Availability_Evening__c</fullName>
    <label>Volunteer Availability: Evening</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days</valueSetName>
    </valueSet>
</CustomField>