force-app/main/default/objects/Contact/fields/Volunteer_Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Code_of_Conduct__c</fullName>
    <label>Volunteer Code of Conduct*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Documents_to_sign</valueSetName>
    </valueSet>
</CustomField>