force-app/main/default/objects/Contact/fields/Volunteer_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Finish_Date__c</fullName>
    <label>Volunteer Finish Date</label>
    <type>Date</type>
</CustomField>