force-app/main/default/objects/Contact/fields/Volunteer_hobbies_interests__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_hobbies_interests__c</fullName>
    <label>Volunteer hobbies/ interests</label>
    <type>TextArea</type>
</CustomField>