force-app/main/default/objects/Contact/fields/Volunteer_On_Boarding_Phase__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_On_Boarding_Phase__c</fullName>
    <label>Volunteer On-Boarding Phase</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1    &gt; Registration Form Complete</fullName>
            </value>
            <value>
                <fullName>2.1 &gt; Garda Vetting Complete</fullName>
            </value>
            <value>
                <fullName>2.2 &gt; Induction Complete</fullName>
            </value>
            <value>
                <fullName>2.2 &gt; Documentation Complete</fullName>
            </value>
            <value>
                <fullName>2.3 &gt; References Complete</fullName>
            </value>
            <value>
                <fullName>3    &gt; Complete - Ready to Start&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>