force-app/main/default/objects/Contact/fields/Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Skills__c</fullName>
    <label>Volunteer Skills</label>
    <type>TextArea</type>
</CustomField>