force-app/main/default/objects/Contact/fields/Volunteer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Start_Date__c</fullName>
    <label>Volunteer Start Date</label>
    <type>Date</type>
</CustomField>