force-app/main/default/objects/Contact/fields/Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Status__c</fullName>
    <label>Volunteer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
                <default>true</default>
                <label>Interested</label>
            </value>
            <value>
                <fullName>In Recruitment</fullName>
            </value>
            <value>
                <fullName>Ready to Start</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive(temporary)</fullName>
            </value>
            <value>
                <fullName>Inactive(permanent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>