force-app/main/default/objects/Contact/fields/Volunteer_Summary__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Summary__c</fullName>
    <label>Volunteer Summary</label>
    <type>TextArea</type>
</CustomField>