force-app/main/default/objects/Contact/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Befriending Visits</fullName>
            </value>
            <value>
                <fullName>Befriending Calls</fullName>
            </value>
            <value>
                <fullName>Additional supports</fullName>
            </value>
            <value>
                <fullName>Covid-19 Shopping</fullName>
            </value>
            <value>
                <fullName>Covid-19 Pension</fullName>
            </value>
            <value>
                <fullName>Good Food Delivered Driving</fullName>
            </value>
            <value>
                <fullName>Professional Volunteering</fullName>
            </value>
            <value>
                <fullName>Short Term Volunteering</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>