force-app/main/default/objects/Contact/fields/What_attracted_you_to_Making_Connections__c.field-meta.xml
<CustomField>
    <fullName>What_attracted_you_to_Making_Connections__c</fullName>
    <label>What attracted you to Making Connections</label>
    <type>TextArea</type>
</CustomField>