force-app/main/default/objects/Contact/fields/Will_you_visit_a_smoker__c.field-meta.xml
<CustomField>
    <fullName>Will_you_visit_a_smoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will you visit a smoker?</label>
    <type>Checkbox</type>
</CustomField>