force-app/main/default/objects/Contact/fields/Will_you_visit_someone_with_pets__c.field-meta.xml
<CustomField>
    <fullName>Will_you_visit_someone_with_pets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Will you visit someone with pets?</label>
    <type>Checkbox</type>
</CustomField>