force-app/main/default/objects/Contact/fields/Wk_2_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Wk_2_Feedback__c</fullName>
    <label>Wk 2 Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Feedback</valueSetName>
    </valueSet>
</CustomField>