force-app/main/default/objects/Contact/recordTypes/Referring_Agent.recordType-meta.xml
<RecordType>
    <fullName>Referring_Agent</fullName>
    <active>true</active>
    <label>Referring Agent</label>
</RecordType>