force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Selected_Volunteer_Type__c</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Volunteer_Start_Date__c</columns>
    <columns>Volunteer_Finish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Volunteer</value>
    </filters>
    <label>Volunteers</label>
</ListView>