force-app/main/default/objects/Contact/listViews/Referring_Agents.listView-meta.xml
<ListView>
    <fullName>Referring_Agents</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Referring_Agent</value>
    </filters>
    <label>Referring Agents</label>
</ListView>